--- a/CSS/index.css
+++ b/CSS/index.css
@@ -65,7 +65,7 @@ audio {
     align-self: flex-end;
 }
 
-/* 닉네임 입력 */
+/* 아이디 입력란 */
 .input1{
     background-color: #ceecff;
     border: #7bcaff solid 3px;
@@ -85,6 +85,7 @@ audio {
     z-index: 100;
   }
 
+/* 아이디 입력버튼 */
 
 /* 스타트 버튼 */
 .start {
@@ -95,3 +96,4 @@ audio {
     background-color: rgba(35, 35, 35, 0.8);
     border: 5px dashed aqua;
 }
+
